# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-05-08  Christian Heller  <christian.heller@tuxtax.de>

        * Clean up old files in "executor/comparator/"
        * Start refactoring files in "executor/referencer/setter/"

2011-05-07  Christian Heller  <christian.heller@tuxtax.de>

        * Add (German language) beginner's manual written by two students

2011-05-05  Christian Heller  <christian.heller@tuxtax.de>

        * Complete file "model_comparator.c"
        * Add example applications created by student

2011-05-03  Christian Heller  <christian.heller@tuxtax.de>

        * Prepare shallow and deep comparison in "executor/comparator/"

2011-05-02  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new files and delete old ones in "executor/comparator/"

2011-05-01  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new files and delete old ones in "executor/comparator/"

2011-04-29  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new files in "executor/comparator/"

2011-04-28  Christian Heller  <christian.heller@tuxtax.de>

        * Add udp socket presentation created by students to "tmp" directory
        * Add "time_output" cybol example applications created by students

2011-04-26  Christian Heller  <christian.heller@tuxtax.de>

        * Continue new files in "executor/comparator/"

2011-04-21  Christian Heller  <christian.heller@tuxtax.de>

        * Add files "item_comparator.c" and "model_comparator.c"

2011-04-19  Christian Heller  <christian.heller@tuxtax.de>

        * Correct new "shell_output" cybol example applications for "sequence", "branch" and "loop"
