@@ -11,7 +11,7 @@ MEMORISER
 + reallocate: trimToSize
 + deallocate: free, delete, destructor, destroy, DDL DROP TABLE
 
-REFERENCER
+ACCESSOR (or COPIER?, since get/set are identical in just copying values)
 
 --> cyboi works with references/pointers only
 --> even for primitive values an array with just one element exists
